added footer section and styles

--- a/index.html
+++ b/index.html
@@ -10,13 +10,28 @@
 
 <body>
     <header>
-
+        <div class="banner-wrapper">
+            <div class="banner">
+                <img src="assets/Group.png" alt="">
+                <h1>"In the near future, I hope to become a <br> Developer."</h1>
+                <p>In this journey I am willing to master HTML, CSS, JavaScript and technologies <br> like React, Node,
+                    Express
+                    and MongoDB.</p>
+                <a href="#support">Contact with me</a>
+            </div>
+        </div>
     </header>
     <main>
-
     </main>
     <footer>
-
+        <div class="footer-content">
+            <p>An Open Commitment by Awlad Hossain</p>
+            <div class="social-icons">
+                <a href="https://www.facebook.com/"><img src="assets/facebook.png" alt=""></a>
+                <a href="https://github.com/"><img src="assets/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/"><img src="assets/linkedin-icon 1.png" alt=""></a>
+            </div>
+        </div>
     </footer>
 </body>
 
