--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         </div>
     </header>
     <main>
+
+        <section id="support" class="support">
+            <h3>I need Support</h3>
+            <p>It will be great if you send me proper feedbacks to improve my knowledge.</p>
+            <form class="feedback">
+                <input type="text" name="" id="" placeholder="Suggest me any feedback for me">
+                <button>Submit</button>
+            </form>
+        </section>
     </main>
     <footer>
         <div class="footer-content">
