added inspiration section and a video using iframe

--- a/index.html
+++ b/index.html
@@ -22,7 +22,56 @@
         </div>
     </header>
     <main>
-
+        <section class="development">
+            <div class="dev-wrapper">
+                <div class="dev-txt">
+                    <h2>Why Web Development??</h2>
+                    <p>Web development is a fast-paced and challenging career, creative problem-solving and continuous
+                        innovation is the main thing here. And I am up for the challenge.</p>
+                </div>
+                <div class="info">
+                    <div class="info-content">
+                        <div class="content">
+                            <h3>I will Do Coding and Change The World</h3>
+                            <p>I will code web apps that make peoples tasks easier.</p>
+                            <a href="">Learn More</a>
+                        </div>
+                        <img src="assets/Layer_1.png" alt="">
+                    </div>
+                    <div class="info-content">
+                        <div class="content">
+                            <h3>I will help People by creating Modern Web System</h3>
+                            <p>By Creating Modern Web Systems I want to create a better accessability of tasks that were
+                                once done manually.</p>
+                            <a href="">Learn More</a>
+                        </div>
+                        <img src="assets/Group 3.png" alt="">
+                    </div>
+                    <div class="info-content">
+                        <div class="content">
+                            <h3>I will create strong and secure Web Apps</h3>
+                            <p>I want to build modern web apps that are secure from malicious acitivities.</p>
+                            <a href="">Learn More</a>
+                        </div>
+                        <img src="assets/Group 4.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="inspiration">
+            <div class="insp-txt">
+                <h2>My Inspiration</h2>
+                <p>I want to transform my ideas into interactive experiences, creating seamless
+                    connections and innovation in the digital world. In this journey I've found some individuals who
+                    inspired me to move forward.</p>
+            </div>
+            <div class="insp-vid">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/iBcpIPPXja8?si=N7RDwBKvmKCIn7Gd"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
         <section id="support" class="support">
             <h3>I need Support</h3>
             <p>It will be great if you send me proper feedbacks to improve my knowledge.</p>
