added the current text section

--- a/index.html
+++ b/index.html
@@ -72,6 +72,33 @@
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
+        <section class="c-target">
+            <div class="target-txt">
+                <h2>My Current Target</h2>
+                <p>My current goal is to master HTML, CSS, Responsive designs, learning fundementals of JavaScript and
+                    DOM manipulation.</p>
+            </div>
+            <div class="skills">
+                <div class="skill skill-1">
+                    <img src="assets/html.png" alt="">
+                    <h4>HTML</h4>
+                    <p>Html is a markup language that is used to build web skeletons.</p>
+                    <a href="https://w3schools.com/html/">Learn More</a>
+                </div>
+                <div class="skill">
+                    <img src="assets/css.png" alt="">
+                    <h4>CSS</h4>
+                    <p>CSS is a tool that helps us design and decorate the web page</p>
+                    <a href="https://www.w3schools.com/css/">Learn More</a>
+                </div>
+                <div class="skill">
+                    <img src="assets/js.png" alt="">
+                    <h4>JavaScript</h4>
+                    <p>JavaScript is a programming language that is used to make web interactive</p>
+                    <a href="https://www.w3schools.com/js/">Learn More</a>
+                </div>
+            </div>
+        </section>
         <section id="support" class="support">
             <h3>I need Support</h3>
             <p>It will be great if you send me proper feedbacks to improve my knowledge.</p>
